--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,3 +1,76 @@
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+  
+  code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+      monospace;
+  }
+
 @media screen and (min-width: 1024px){
     
+
+    .arrange{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    h1{
+        height: 50px;
+        font-size: 48px;
+        margin-bottom: 5px;
+    }
+
+    h1 span {
+        color: red;
+      }
+
+    h3{
+        height: 50px;
+    }
+
+    .displayBoard{
+        width:1500px;
+        display: flex;
+        margin-left: 100px;
+        column-gap: 30px;
+    }
+
+    .displayTotal{
+        display: flex;
+        
+    flex-direction: column;
+    }
+
+    .divTitle{
+        display: flex;
+        height: 150px;
+        flex-direction: column;
+        margin-left: 100px;
+    }
+
+    .divGraph{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 1300px;
+        
+    justify-content: space-between;
+    }
+    
+
+    .divInfos{
+        width: 265px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
 }
